web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: 1st-web
  labels:
    app: web-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web-app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: web-app
    spec:
      containers:
      - image: jinwoo0824/web:v1.4
        name: web
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: 100Mi
            cpu: 100m
          limits:
            memory: 100Mi
            cpu: 100m
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
        volumeMounts:
        - name: pvcweb
          mountPath: /1st-web
      volumes:
      - name: pvcweb
        persistentVolumeClaim:
          claimName: pvcweb
      nodeSelector:
        app: web-app

---

apiVersion: v1
kind: Service
metadata:
  name: web-svc
spec:
  selector:
    app: web-app
  type: NodePort
  clusterIP: 10.100.100.100
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
